fix: resolve breakpoint problem
In some situation, scrollbar could impact the affect of breakpoint

Solution: making scrollbar disappear.

--- a/src/scss/_breakpoints.scss
+++ b/src/scss/_breakpoints.scss
@@ -1,5 +1,5 @@
 @mixin breakpoint($bp: 375px) {
-  @media (min-width: 375px) {
+  @media (min-width: $bp) {
     @content;
   }
 }
